--- a/FoxholeSupplyCalculator.csproj
+++ b/FoxholeSupplyCalculator.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>img/icon.ico</ApplicationIcon>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
